1.Updated Dependencies 2.refactored code   -Moved Configuration files to configuration folder   -Created waits and javascript executor in utils